--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "weatherbot",
   "version": "1.0.0",
-  "description": "",
+  "description": "A really cool app to get the weather",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Antonin Archer",
   "license": "ISC",
   "dependencies": {
     "dotenv": "2.0.0",
-    "express": "4.14.0",
+    "express": "4.14.0"
   }
 }
