--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "2.0.0",
-    "express": "4.14.0"
+    "express": "4.14.0",
+    "request-promise": "4.1.1"
   }
 }
