--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Antonin Archer",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "1.15.2",
     "dotenv": "2.0.0",
     "express": "4.14.0",
     "request-promise": "4.1.1"
